Fixed collapsing and small screen view
Fixed an isue were the sidebar wouldn't collapse in SS 3.4. Also fixed an issue with the javascript width detection for small screens. Small style changes to collapse button.

--- a/css/cms.css
+++ b/css/cms.css
@@ -14,6 +14,12 @@
   top: 0px;
   height: 100%;
 }
+ .rightsidebar .cms-panel-toggle.south{
+   margin-left: 12px;
+ }
+.rightsidebar.collapsed{
+  width: auto;
+}
 .rightsidebar .cms-panel-toggle a {
   text-align: left;
 }
